--- a/.github/workflows/crypto-bot.yml
+++ b/.github/workflows/crypto-bot.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    - run: pip install -r requirements.txt
+    - run: pip install aiohttp pandas numpy
     - run: python "Crossover Strat.py"
     - run: |
         git config --local user.email "action@github.com"
